--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
